--- a/Assets/style.css
+++ b/Assets/style.css
@@ -170,7 +170,7 @@ h1{
     border: 2px solid black;
     color: #30ff07;
     height: 10%;
-    width:10%;
+    width:auto;
     font-weight: bolder;
     font-size: 20px;
 
