--- a/Assets/style.css
+++ b/Assets/style.css
@@ -41,7 +41,7 @@ h1 {
     display: inline-block;
     position: relative;
     animation: rise 0.5s ease-in-out forwards;
-    color: #000;
+    color:white;
 }
 @keyframes rise {
     0% {
@@ -63,9 +63,10 @@ h1 {
 
 .div_buttons button{
     border-radius: 100px;
-    background: #01301C;
+    /* background: #01301C; */
+    background: white;
     border: none;
-    color: #30ff07;
+    /* color: #30ff07; */
     height: 15vh;
     width:15vh;
     font-weight: bolder;
@@ -75,7 +76,7 @@ h1 {
 
 .div_buttons button:active{
     border: 3px solid #30ff07;
-    background: #2bff0050;
+    /* background: #2bff0050; */
 
 
 }
@@ -87,14 +88,14 @@ h1 {
 }
 .div_buttons2 button:active{
     border: 3px solid #30ff07;
-    background: #2bff0050;
+    /* background: #2bff0050; */
 
 }
 .div_buttons2 button{
     border-radius: 100px;
-    background: #01301C;
+    background :white;
     border: none;
-    color: #30ff07;
+    /* color: #30ff07; */
     height: 15vh;
     width:15vh;
     font-weight: bolder;
@@ -103,7 +104,8 @@ h1 {
     
 }
 i{
-    color: #30ff07;
+    /* color: #30ff07; */
+    color:black;
 }
 .Reset_div{
     display: flex;
@@ -111,24 +113,26 @@ i{
     justify-content: center;
 }
 .Reset_div button{
-    border-radius: 20px;
-    background: #01301C;
+    border-radius: 10px;
+    background: white;
     border: none;
-    color: #30ff07;
+    /* color: #30ff07; */
+    color: #000;
     height: auto;
     width:auto;
     padding: 8px;
-    font-weight: lighter;
+    font-weight: bolder;
     font-size: 20px;
     margin-bottom: 1%;
 }
 .Reset_div button:active{
-    border: 3px solid #30ff07;
-    background: #2bff0050;
+    border: 1px solid #30ff07;
+    /* background: #2bff0050; */
 
 }
 h1{
-    color: #30ff07;
+    /* color: #30ff07; */
+    color: white;
     animation: rise 0.2s ease-in forwards;
 }
 
@@ -167,10 +171,12 @@ h1{
     margin-top: 5px;
 }
 .lets-begin-button button{
-    border-radius: 20px;
-    background: #01301C;
+    border-radius: 10px;
+    /* background: #01301C; */
+    background: white;
     border: 2px solid black;
-    color: #30ff07;
+    /* color: #30ff07; */
+    color: #000;
     height: 10%;
     width:auto;
     font-weight: bolder;
@@ -221,8 +227,11 @@ width: 30vw;
 .startedone{
     margin-top: 1%;
     border-radius: 10px;
-    background: #01301C;
-    color: #0ccf64;
+    /* background: #01301C; */
+    background: white;
+    /* color: #0ccf64; */
+    color: #000;
+
     /* font-weight: bolder; */
     font-size: 25px;
     border: none;
@@ -244,8 +253,10 @@ width: 30vw;
 .startedtwo{
     margin-top: 1%;
     border-radius: 10px;
-    background: #01301C;
-    color: #0ccf64;
+    /* background: #01301C; */
+    background: white;
+    /* color: #0ccf64; */
+    color: #000;
     /* font-weight: bolder; */
     font-size: 25px;
     border: none;
@@ -279,11 +290,22 @@ width: 30vw;
 }
 .imgthree button{
     margin-top: 1%;
-    border-radius: 50px;
-    background: #01301C;
-    color: #0ccf64;
-    font-weight: bolder;
-    font-size: 35px;
+    border-radius: 10px;
+    background:white;
+    color: #000;
+    /* color: #0ccf64; */
+    /* font-weight: bolder; */
+    font-size: 25px;
+    border: none;
+}
+.startedthree{
+    margin-top: 1%;
+    border-radius: 10px;
+    background: white;
+    /* color: #0ccf64; */
+    color: #000;
+    /* font-weight: bolder; */
+    font-size: 25px;
     border: none;
 }
 .start-card-one{
@@ -298,12 +320,20 @@ width: 30vw;
 .start-card-one button{
     margin-top: 1%;
     border-radius: 10px;
-    background: #01301C;
+    background: white;
+
     color: #0ccf64;
     font-weight: bolder;
     font-size: 35px;
-border: 1px solid white;    
+    border: 1px solid black;    
+
 }
+
+.start-card-one button:active{
+    border: 1px solid white;    
+
+}
+
 
 .start-card-two{
     border: 1px solid black;
@@ -318,12 +348,19 @@ border: 1px solid white;
 .start-card-two button{
     margin-top: 1%;
     border-radius: 10px;
-    background: #01301C;
+    background: white;
     color: #0ccf64;
     font-weight: bolder;
     font-size: 35px;
-   border: 1px solid white;    
+    border: 1px solid black;    
+
 }
+
+.start-card-two button:active{
+    border: 1px solid white;    
+
+}
+
 .start-card-three{
     text-align: center;
     font-weight: bolder;
@@ -335,19 +372,22 @@ border: 1px solid white;
 }
 .allBg{
     /* background: #c411118a; */
-    background-image: url('./Images/R.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* background-image: url('./Images/R.jpeg'); */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    background: #000;
 }
 
 .start-card-three button{
     margin-top: 1%;
     border-radius: 10px;
-    background: #01301C;
+    background: white;
+
     color: #0ccf64;
     font-weight: bolder;
     font-size: 35px;
-   border: 1px solid white;    
+    
+   border: 1px solid black;    
 }
 .startedthree{
     margin-top: 1%;
@@ -359,3 +399,9 @@ border: 1px solid white;
     border: none;
 }
 
+
+
+.start-card-three button:active{
+    border: 1px solid white;    
+
+}
