--- a/Assets/style.css
+++ b/Assets/style.css
@@ -62,15 +62,15 @@ h1 {
 }
 
 .div_buttons button{
-    border-radius: 100px;
+    border-radius: 10px;
     /* background: #01301C; */
     background: white;
-    border: none;
+    border:3px solid black;
     /* color: #30ff07; */
-    height: 15vh;
+    /* height: 15vh; */
     width:15vh;
     font-weight: bolder;
-    font-size: 25px;
+    font-size: 35px;
 
 }
 
@@ -92,14 +92,14 @@ h1 {
 
 }
 .div_buttons2 button{
-    border-radius: 100px;
+    border-radius: 10px;
     background :white;
-    border: none;
+    border: 3px solid black;
     /* color: #30ff07; */
-    height: 15vh;
+    /* height: 10vh; */
     width:15vh;
     font-weight: bolder;
-    font-size: 25px;
+    font-size: 35px;
     margin-top: 5px;
     
 }
@@ -115,7 +115,7 @@ i{
 .Reset_div button{
     border-radius: 10px;
     background: white;
-    border: none;
+    border: 3px solid black;
     /* color: #30ff07; */
     color: #000;
     height: auto;
@@ -126,7 +126,7 @@ i{
     margin-bottom: 1%;
 }
 .Reset_div button:active{
-    border: 1px solid #30ff07;
+    border: 3px solid #30ff07;
     /* background: #2bff0050; */
 
 }
@@ -153,7 +153,6 @@ h1{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* border: 1px solid white; */
 }
 
 .img_div img{
@@ -161,6 +160,8 @@ h1{
     width: 90vw;
     height: 45vh;
     margin-top: 5px;
+    border: 10px solid white;
+
     /* padding: 5px; */
 }
 
@@ -190,28 +191,33 @@ h1{
 .lets_bigin-card{
     display: flex;
     /* flex-direction: column; */
+    /* flex-wrap: wrap; */
+    /* justify-content: center; */
+    margin-left: 10%;
     flex-wrap: wrap;
-    justify-content: center;
     margin-top: 5px;
+    /* margin: ; */
     padding: 5px;
     gap: 6%;
     /* background :#f36e028e; */
     border-radius: 20px;
     /* border: 1px solid ; */
 }
+
 .imgone img{
-    border-radius: 20px;
+    border-radius: 10px;
+
     /* border: 2px solid #01301C; */
-width: 90%;
+width: 80vw;
     height: 30vh;
+    margin-bottom: 5px;   
+    border:10px solid black;
 
     margin-top: 1%;
 }
-.imgone{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+/* .imgone{
+ margin-bottom: 5px;   
+} */
 
 /* .imgone button{
     margin-top: 1%;
@@ -226,21 +232,26 @@ width: 90%;
 
 .startedone{
     margin-top: 1%;
-    border-radius: 10px;
+    border-radius: 100px;
     /* background: #01301C; */
     background: white;
     /* color: #0ccf64; */
     color: #000;
-width: 90%;
+    width: 80vw;
+    
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* justify-content: center; */
+    /* margin: auto; */
     /* font-weight: bolder; */
     font-size: 25px;
     border: none;
 }
-.imgtwo{
+/* .imgtwo{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
+} */
 
 .startedtwo{
     margin-top: 1%;
@@ -252,34 +263,48 @@ width: 90%;
     /* font-weight: bolder; */
     font-size: 25px;
     border: none;
+    width: 80vw;
+    margin-top: 2px;
+
 }
 .imgtwo img{
-    border-radius: 20px;
+    border-radius: 10px;
+
+    /* border:5px solid white; */
+
+    /* border:10px solid white; */
 
     /* border: 2px solid #01301C; */
-    width: 110%;
+    border:10px solid black;
+
+    width: 80vw;
     height: 30vh;
+    margin-bottom: 5px;   
 
     margin-top: 1%;
 }
 
 
 .imgthree img{
-    border-radius: 20px;
+    border-radius: 10px;
 
-    /* border: 2px solid #01301C; */
-    width: 60%;
+    /* border:10px solid white; */
+    /* border:5px solid white; */
+
+    width: 80vw;
     height: 30vh;
+    margin-bottom: 5px;   
+    border:10px solid black;
 
     margin-top: 1%;
 
 }
 
-.imgthree{
+/* .imgthree{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
+} */
 .imgthree button{
     margin-top: 1%;
     border-radius: 10px;
@@ -289,6 +314,7 @@ width: 90%;
     /* font-weight: bolder; */
     font-size: 25px;
     border: none;
+    width: 80vw;
 }
 .startedthree{
     margin-top: 1%;
@@ -301,12 +327,12 @@ width: 90%;
     border: none;
 }
 .start-card-one{
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 10px;
-    margin-top: 15px;
+    /* margin-top: 20px; */
     background: white;
-    width: 90%;
-
+    width: 40vw;
+margin: auto;
     text-align: center;
     font-weight: bolder;
 }
@@ -314,8 +340,9 @@ width: 90%;
     margin-top: 1%;
     border-radius: 10px;
     background: white;
+    /* width: 100%; */
 
-    color: #0ccf64;
+    /* color: #0ccf64; */
     font-weight: bolder;
     font-size: 35px;
     border: 1px solid black;    
@@ -329,11 +356,12 @@ width: 90%;
 
 
 .start-card-two{
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 10px;
     margin-top: 15px;
     background: white;
-    width: 110%;
+    width: 40vw;
+    margin: auto;
 
     text-align: center;
     font-weight: bolder;
@@ -343,10 +371,12 @@ width: 90%;
     margin-top: 1%;
     border-radius: 10px;
     background: white;
-    color: #0ccf64;
+    /* color: #0ccf64; */
     font-weight: bolder;
     font-size: 35px;
-    border: 1px solid black;    
+    border: 1px solid black;
+/* width: 100%; */
+width: 20vw;
 
 }
 
@@ -361,8 +391,9 @@ width: 90%;
     border: 1px solid black;
     border-radius: 10px;
     background: white;
-    margin-top: 15px;
-    width: 60%;
+    margin-top: 20px;
+    width: 40vw;
+    margin: auto;
 
 
 }
@@ -371,19 +402,18 @@ width: 90%;
     /* background-image: url('./Images/R.jpeg'); */
     /* background-size: cover; */
     /* background-repeat: no-repeat; */
-    background: #000;
+    background: #0017eb;
 }
 
 .start-card-three button{
     margin-top: 1%;
     border-radius: 10px;
     background: white;
-
-    color: #0ccf64;
+    /* color: #0ccf64; */
     font-weight: bolder;
     font-size: 35px;
-    
-   border: 1px solid black;    
+    border: 1px solid black;    
+    width: 20vw;
 }
 .startedthree{
     margin-top: 1%;
@@ -400,4 +430,34 @@ width: 90%;
 .start-card-three button:active{
     border: 1px solid white;    
 
+}
+
+
+.new_div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.new_div img{
+    border-radius: 10px;
+    border: 5px solid black;
+    height: 30vh;
+    width:80vw;
+    margin-top: 5px;
+}
+
+.restartOne{
+    font-weight: lighter;
+    font-size: 20px;
+}
+
+
+.close-sound-button{
+    margin-left: 5%;
+}
+
+#Mute{
+    width: 5vw;
+    height: 1%;
 }
