--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
 /* *{
     margin: 0;
     padding: 0;
@@ -71,7 +73,9 @@ h1 {
     width:15vh;
     font-weight: bolder;
     font-size: 35px;
-
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 
 .div_buttons button:active{
@@ -101,6 +105,9 @@ h1 {
     font-weight: bolder;
     font-size: 35px;
     margin-top: 5px;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
     
 }
 i{
@@ -115,6 +122,9 @@ i{
 .Reset_div button{
     border-radius: 10px;
     background: white;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
     border: 3px solid black;
     /* color: #30ff07; */
     color: #000;
@@ -161,7 +171,9 @@ h1{
     height: 45vh;
     margin-top: 5px;
     border: 10px solid white;
-
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
     /* padding: 5px; */
 }
 
@@ -190,15 +202,13 @@ h1{
 }
 .lets_bigin-card{
     display: flex;
-    /* flex-direction: column; */
-    /* flex-wrap: wrap; */
-    /* justify-content: center; */
-    margin-left: 10%;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     margin-top: 5px;
     /* margin: ; */
-    padding: 5px;
-    gap: 6%;
+    /* padding: 5px; */
+    gap: 2%;
     /* background :#f36e028e; */
     border-radius: 20px;
     /* border: 1px solid ; */
@@ -208,26 +218,15 @@ h1{
     border-radius: 10px;
 
     /* border: 2px solid #01301C; */
-width: 80vw;
+width: 30vw;
     height: 30vh;
     margin-bottom: 5px;   
     border:10px solid black;
-
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
     margin-top: 1%;
 }
-/* .imgone{
- margin-bottom: 5px;   
-} */
-
-/* .imgone button{
-    margin-top: 1%;
-    border-radius: 50px;
-    background: #01301C;
-    color: #0ccf64;
-    font-weight: bolder;
-    font-size: 35px;
-    border: none;
-} */
 
 
 .startedone{
@@ -237,7 +236,7 @@ width: 80vw;
     background: white;
     /* color: #0ccf64; */
     color: #000;
-    width: 80vw;
+    width: 30vw;
     
     /* display: flex; */
     /* flex-direction: row; */
@@ -263,13 +262,15 @@ width: 80vw;
     /* font-weight: bolder; */
     font-size: 25px;
     border: none;
-    width: 80vw;
+    width: 30vw;
     margin-top: 2px;
 
 }
 .imgtwo img{
     border-radius: 10px;
-
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
     /* border:5px solid white; */
 
     /* border:10px solid white; */
@@ -277,7 +278,7 @@ width: 80vw;
     /* border: 2px solid #01301C; */
     border:10px solid black;
 
-    width: 80vw;
+    width: 30vw;
     height: 30vh;
     margin-bottom: 5px;   
 
@@ -287,11 +288,13 @@ width: 80vw;
 
 .imgthree img{
     border-radius: 10px;
-
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
     /* border:10px solid white; */
     /* border:5px solid white; */
 
-    width: 80vw;
+    width: 30vw;
     height: 30vh;
     margin-bottom: 5px;   
     border:10px solid black;
@@ -300,11 +303,25 @@ width: 80vw;
 
 }
 
-/* .imgthree{
+
+.imgone{
     display: flex;
     flex-direction: column;
     justify-content: center;
-} */
+}
+
+
+.imgtwo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.imgthree{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .imgthree button{
     margin-top: 1%;
     border-radius: 10px;
@@ -314,7 +331,7 @@ width: 80vw;
     /* font-weight: bolder; */
     font-size: 25px;
     border: none;
-    width: 80vw;
+    width: 30vw;
 }
 .startedthree{
     margin-top: 1%;
@@ -331,10 +348,13 @@ width: 80vw;
     border-radius: 10px;
     /* margin-top: 20px; */
     background: white;
-    width: 40vw;
+    width: 30vw;
 margin: auto;
     text-align: center;
     font-weight: bolder;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 .start-card-one button{
     margin-top: 1%;
@@ -360,9 +380,11 @@ margin: auto;
     border-radius: 10px;
     margin-top: 15px;
     background: white;
-    width: 40vw;
+    width: 30vw;
     margin: auto;
-
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
     text-align: center;
     font-weight: bolder;
 }
@@ -392,9 +414,11 @@ width: 20vw;
     border-radius: 10px;
     background: white;
     margin-top: 20px;
-    width: 40vw;
+    width: 30vw;
     margin: auto;
-
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
 
 }
 .allBg{
@@ -403,6 +427,7 @@ width: 20vw;
     /* background-size: cover; */
     /* background-repeat: no-repeat; */
     background: #0017eb;
+    background-size: 100%;
 }
 
 .start-card-three button{
@@ -445,6 +470,9 @@ width: 20vw;
     height: 30vh;
     width:80vw;
     margin-top: 5px;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 
 .restartOne{
@@ -453,11 +481,56 @@ width: 20vw;
 }
 
 
-.close-sound-button{
-    margin-left: 5%;
+
+hr.gradient {
+    border: 2px solid white;
+    height: 5px;
+    background: black;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 
-#Mute{
-    width: 5vw;
-    height: 1%;
+
+
+.beautiful-heading {
+    font-family: 'Playfair Display', serif;
+    font-size: 3em;
+    /* color: #333; */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    margin: 0;
+    /* padding: 15px; */
+    background: linear-gradient(45deg, #5d9be2, #078bb3);
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+
+
+
+
+
+.beautiful-heading1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 3em;
+    /* color: #333; */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    margin: 0;
+    /* padding: 15px; */
+    background: linear-gradient(45deg, #5d9be2, #078bb3);
+    color: white;
+    border-radius: 100px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+
+.beautiful-heading:hover {
+    transform: scale(1.05);
 }
